# MiniHSM

./: CMakeLists.txt  README.md  Readme.md  build.sh
architecture/: HSM_architecture.md
docs/: 01_High_Level_Architecture.md  02_Request_Runtime_Flow.md  03_Key_Management.md  04_Recovery_Architecture.md  05_Trust_Boundary.md
include/: AuditManager.hpp  AuthorizationManager.hpp  CryptoEngine.hpp  ExecutionManager.hpp  IModule.hpp  KeyManager.hpp  KeyVault.hpp  MiniHSM.hpp  Pkcs11Module.hpp  PolicyEngine.hpp  RequestContext.hpp  SessionManager.hpp  Status.hpp  WorkflowManager.hpp
src/: AuditManager.cpp  AuthorizationManager.cpp  CryptoEngine.cpp  ExecutionManager.cpp  KeyManager.cpp  KeyVault.cpp  MiniHSM.cpp  Pkcs11Module.cpp  PolicyEngine.cpp  SessionManager.cpp  WorkflowManager.cpp  main.cpp
